syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.brzomessages.communication";
option java_outer_classname = "CommunicationProto";

package communication;

// The greeting service definition.
service FirebaseToken {
  // Sends a greeting
  rpc UpdateApi (UpdateFirebaseToken) returns (ResultMessages) {}
  rpc UpdateAdmin (UpdateFirebaseToken) returns (ResultMessages) {}
  rpc UpdatePaypal (UpdateFirebaseToken) returns (ResultMessages) {}
}

// The request message containing the user's name.
message UpdateFirebaseToken {
  string KeyAccess = 1;
  string FirebaseToken = 2;
  repeated string Phones  = 3;
}

// The response message containing the greetings
message ResultMessages {
  bool Success = 1;
  string error = 2;
  string message = 3;
  string result = 4;
}